--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -3,8 +3,8 @@ url=https://config.dayforcehcm.com/
 companyName=totallygroupconfig
 userName=Test
 passWord= Dayforce2
-emailFrom=enene69@gmail.com
-emailPassword=lrdm rgjw witb eurg
+emailFrom=john.kushoro1@gmail.com
+emailPassword=gxki qzbn wlqo ises
 Organisation_Email=john.kushoro@totallygroup.com
 Subject=Dayforce Automation Test Results
 MailBody=Dear Team,\n\nAttached is the comprehensive test report for your review, detailing the results of the Dayforce Automation tests.\n\nBest regards,\nJohn
