--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,22 @@
             <version>6.1.14</version>
         </dependency>
 
+        <!-- DON'T FORGET TO REMOVE -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version> <!-- Use the latest stable version -->
+        </dependency>
+
+        <!-- DON'T FORGET TO REMOVE -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version> <!-- Use the latest stable version -->
+        </dependency>
+
+
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
