--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,7 +2,7 @@
 url=https://config.dayforcehcm.com/
 companyName=totallygroupconfig
 userName=Test
-passWord= Dayforce2
+passWord= Dayforce@12
 emailFrom=john.kushoro1@gmail.com
 emailPassword=gxki qzbn wlqo ises
 Organisation_Email=john.kushoro@totallygroup.com
